# voiceinput

./: .gitignore  BUILD_WINDOWS.md  README.md  README_CN.md  build_windows.bat
.github/workflows/: build.yml
src/: index.html  main.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  clipboard.rs  config.rs  hotkey.rs  main.rs  model_downloader.rs  punctuation.rs  state.rs  tray.rs  whisper_engine.rs
src/styles/: overlay.css
