[package]
name = "voiceinput"
version = "1.0.0"
edition = "2021"
description = "Cross-platform voice input tool"
license = "MIT"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = "0.13"
cpal = "0.15"
arboard = { version = "3", features = ["wayland-data-control"] }
rdev = "0.5"

toml = "0.8"
dirs = "6"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
ureq = "2"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
